--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Jesus J. Ballesteros
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "Ph. D. in Neuroscience. Professional information"
+  About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
