--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
-  google-scholar: https://scholar.google.com/citations?hl=en&user=twNQf4sAAAAJ&view_op=list_works&sortby=pubdate
+  google-scholar: citations?hl=en&user=twNQf4sAAAAJ&view_op=list_works&sortby=pubdate
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
