--- a/_config.yml
+++ b/_config.yml
@@ -95,16 +95,16 @@ keywords: "science,electrophysiology,brain,neuroscience,neuron"
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#FFFFFF"
+navbar-col: "#1f1f1f"
+navbar-text-col: "#EAEAEA"
 navbar-border-col: "#DDDDDD"
 page-col: "#404040"
 text-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#FFFFFF"
-footer-link-col: "#FFFFFF"
+footer-col: "#1f1f1f"
+footer-text-col: "#EAEAEA"
+footer-link-col: "#EAEAEA"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
