--- a/_config.yml
+++ b/_config.yml
@@ -94,21 +94,19 @@ keywords: "science,electrophysiology,brain,neuroscience,neuron"
 # --- Colours / background image --- #
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
-
-navbar-col: "#1f1f1f"
+navbar-col: "#1F1F1F"
 navbar-text-col: "#EAEAEA"
 navbar-border-col: "#DDDDDD"
 page-col: "#404040"
 text-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#1f1f1f"
+footer-col: "#1F1F1F"
 footer-text-col: "#EAEAEA"
 footer-link-col: "#EAEAEA"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
-
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
 #page-img: "/assets/img/bgimage.png"
