--- a/_config.yml
+++ b/_config.yml
@@ -99,11 +99,11 @@ navbar-text-col: "#EAEAEA"
 navbar-border-col: "#DDDDDD"
 page-col: "#404040"
 text-col: "#FFFFFF"
-link-col: "#008AFF"
-hover-col: "#0085A1"
+link-col: "#FF7500"
+hover-col: "#FF9E4D"
 footer-col: "#1F1F1F"
 footer-text-col: "#EAEAEA"
-footer-link-col: "#EAEAEA"
+footer-link-col: "#7E7E7E"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
